--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
-    "eslint": "eslint . --ext js,jsx",
-    "eslint:fix": "eslint . --ext js,jsx --fix"
+    "lint": "eslint . --ext js,jsx",
+    "lint:fix": "eslint . --ext js,jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "cssnano": "^5.0.7",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -29,6 +30,8 @@
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
+    "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
@@ -42,5 +45,10 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
