--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.1",
+    "husky": "4.3.8",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
@@ -49,7 +49,7 @@
   },
   "husky": {
     "hooks": {
-      "precommit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
