--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "4.3.8",
-    "lint-staged": "^11.1.2",
+    "lint-staged": "10.0.2",
     "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
@@ -49,7 +49,10 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo \"[Husky] pre-commit\""
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.js": "echo test"
   }
 }
