--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
+    "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
     "husky": "4.3.8",
     "lint-staged": "10.0.2",
