--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
-    "lint": "eslint . --ext js,jsx",
-    "lint:fix": "eslint . --ext js,jsx --fix"
+    "lint": "eslint ./src --ext js,jsx",
+    "lint:fix": "eslint ./src --ext js,jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -55,7 +55,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "echo test"
+      "npm run lint"
     ]
   }
 }
