--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
-    "lint": "eslint ./src --ext js,jsx",
-    "lint:fix": "eslint ./src --ext js,jsx --fix"
+    "lint": "eslint ./src --ext js,jsx,ts,tsx",
+    "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,10 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -43,6 +47,8 @@
     "react-dom": "^17.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
