--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,9 @@
       }
     ],
     "react/display-name": 1,
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/no-unresolved": "off"
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint"]
 }
