--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
+    "ssr": "ts-node ./server/main.server.tsx",
     "lint": "eslint ./src --ext js,jsx,ts,tsx",
     "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
   },
@@ -16,6 +17,8 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.6.2",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
@@ -48,6 +52,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "web-webpack-plugin": "^4.6.7",
