--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "react/display-name": 1,
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "import/no-unresolved": "off"
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint"]
