--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
-    "ssr": "ts-node ./server/main.server.tsx",
+    "start:server": "webpack -c ./server/webpack.server.config.js",
+    "ssr": "node ./server/dist/main.js",
     "lint": "eslint ./src --ext js,jsx,ts,tsx",
     "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
   },
@@ -58,7 +59,8 @@
     "web-webpack-plugin": "^4.6.7",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "husky": {
     "hooks": {
