--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "webpack-basic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "webpack -c webpack.config.js",
     "server": "webpack serve",
     "start:server": "webpack -c ./server/webpack.server.config.js",
+    "desktop": "electron .",
     "ssr": "node ./server/dist/main.js",
     "lint": "eslint ./src --ext js,jsx,ts,tsx",
     "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
@@ -18,6 +19,7 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@electron/remote": "^1.2.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.18",
@@ -30,6 +32,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "cssnano": "^5.0.7",
+    "electron": "^13.2.1",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -68,7 +71,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx}": [
+    "src/**/*.{js,jsx,ts,tsx}": [
       "npm run lint"
     ]
   }
