--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "import/no-unresolved": "off"
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint"]
