--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "webpack serve",
     "start:server": "webpack -c ./server/webpack.server.config.js",
     "desktop": "electron .",
+    "dll": "webpack -c webpack_dll.config.js",
     "ssr": "node ./server/dist/main.js",
     "lint": "eslint ./src --ext js,jsx,ts,tsx",
     "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
@@ -29,6 +30,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
+    "core-js": "^3.16.2",
     "css-loader": "^6.2.0",
     "cssnano": "^5.0.7",
     "electron": "^13.2.1",
@@ -62,7 +64,8 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "husky": {
     "hooks": {
