--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack -c webpack.config.js",
+    "start": "webpack -c webpack.dev.config.js",
+    "build": "webpack -c webpack.prod.config.js",
     "server": "webpack serve",
-    "start:server": "webpack -c ./server/webpack.server.config.js",
-    "desktop": "electron .",
-    "dll": "webpack -c webpack_dll.config.js",
-    "ssr": "node ./server/dist/main.js",
+    "dll": "webpack -c webpack_dll.dev.config.js",
+    "dll:build": "webpack -c webpack_dll.prod.config.js",
     "lint": "eslint ./src --ext js,jsx,ts,tsx",
     "lint:fix": "eslint ./src --ext js,jsx,ts,tsx --fix"
   },
@@ -64,7 +63,9 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
+    "webpack-parallel-uglify-plugin": "^2.0.0",
     "whatwg-fetch": "^3.6.2"
   },
   "husky": {
